# ffnetwork

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
.circleci/: config.yml
.github/workflows/: main.yml
ci/: install-linux.sh  install-osx.sh  travis.sh  unittest.sh
cmake/: XcodeSourceGroup.cmake
command/: CMakeLists.txt  downloader.cpp  main.cpp
include/ffnetwork/: Client.h  RequestTask.h  RequestTaskDelegate.h  Response.h  client.h  request.h  request_task.h  request_task_delegate.h  response.h  response_impl.h
source/: CMakeLists.txt  Client.cpp  CurlClient.cpp  CurlClient.h  Request.cpp  RequestImpl.cpp  RequestImpl.h  RequestTaskImpl.cpp  RequestTaskImpl.h  client.cpp  curl_client.cpp  curl_client.h  request_impl.cpp  request_impl.h  request_task_impl.cpp  request_task_impl.h  response_impl.cpp
source/base/: CMakeLists.txt  compiler_specific.h  file.cpp  file.h  logging.cpp  logging.h  macros.h  mapping.cpp  mapping.h  message.cpp  message.h  unique_fd.h  unique_object.h
source/base/messageloop/: delayed_task.cpp  delayed_task.h  message.cpp  message.h  message_loop.cpp  message_loop.h  message_loop_impl.cpp  message_loop_impl.h  message_loop_impl_darwin.h  message_loop_impl_darwin.mm  message_loop_impl_linux.cpp  message_loop_impl_linux.h  message_loop_task_queues.cpp  message_loop_task_queues.h  task_runner.cpp  task_runner.h
source/base/platform/darwin/: cf_reference_utils.h  cf_reference_utils.mm  message_loop_impl_darwin.h  message_loop_impl_darwin.mm
source/base/platform/linux/: message_loop_impl_linux.cpp  message_loop_impl_linux.h  timerfd.cpp  timerfd.h
source/base/platform/posix/: file_posix.cpp  mapping_posix.cpp
source/base/tests/: CMakeLists.txt  file_test.cpp  message_loop_task_queues_test.cpp  message_loop_test.cpp  message_test.cpp  thread_local_test.cpp  thread_test.cpp  time_delta_test.cpp  time_test.cpp  waitable_event_test.cpp
source/base/thread/: mutex.cpp  mutex.h  thread.cpp  thread.h  thread_annotations.h  thread_local.cpp  thread_local.h  waitable_event.cpp  waitable_event.h
source/base/time/: time_delta.h  time_point.cpp  time_point.h
source/log/: log_macro.h  logger.cpp  logger.h
source/net/: client.cpp  curl_client.cpp  curl_client.h  request.cpp  request_impl.cpp  request_impl.h  request_task_impl.cpp  request_task_impl.h  response_impl.cpp  response_impl.h  url.cpp  url.h
source/sigslot/: sigslot.hpp
source/thread/: async_invoker.cpp  async_invoker.h  async_invoker_inl.h  callback.h  critical_section.cpp  critical_section.h  event.cpp  event.h  message_handler.cpp  message_handler.h  message_queue.cpp  message_queue.h  thread.cpp  thread.h  thread_annotations.h
source/utils/: construct_macro.h  time_utils.cpp  time_utils.h
unittest/: CMakeLists.txt  RequestImplTest.cpp  base_message_test.cpp  callback_test.cpp  curl_client_test.cpp  event_test.cpp  gunit.h  message_loop_task_queues_test.cpp  message_loop_test.cpp  message_queue_test.cpp  request_impl_test.cpp  request_test.cpp  thread_local_test.cpp  thread_test.cpp  time_tuils_test.cpp
